--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body::before {
   content: '';
-  background-image: url(../images/Poodle2.jpeg);
+  background-image: url(./images/Poodle2.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
